# fin_control

./: .coverage  .env  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  locustfile.py  pyproject.toml
fin_control/: app.py  database.py  depends.py  enums.py  models.py  security.py  settings.py
fin_control/routers/: auth_router.py  transactions_router.py  users_router.py
fin_control/schemas/: base_schemas.py  transaction_schemas.py  user_schemas.py
migrations/: env.py
migrations/versions/: 209ad60663ed_refact_lazy_selectin_on_user_model.py  2521c28839af_create_user_table_and_transaction_table.py  4597f7bf2036_add_superuser_column_to_the_users_table.py  8999c0d0a3c8_create_table_user.py  ae6f95e348a3_transactions_model_implements.py  c62b844c80c9_add_field_updated_at_in_table_user.py  de01491b5cf8_remove_teste_field.py
tests/: conftest.py  test_app.py  test_models.py  test_security.py
tests/__pycache__/: conftest.cpython-311-pytest-9.0.2.pyc.20008  conftest.cpython-311-pytest-9.0.2.pyc.36840
tests/test_models/: test_transactions_models.py  test_users_models.py
tests/test_routers/: test_auth.py  test_transactions.py  test_users.py
