[project]
name = "fin-control"
version = "0.1.0"
description = ""
authors = [
    {name = "Arth26",email = "arthuralves@ads.fiponline.edu.br"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "faker (>=40.1.2,<41.0.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "psycopg-binary (>=3.3.2,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "locust (>=2.44.0,<3.0.0)",
    "freezegun (>=1.5.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 149
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
pre_format = 'ruff check --fix'
format = 'ruff format'
pre_run = 'task format'
run = 'fastapi dev fin_control/app.py'
test = 'pytest -s -x --cov=fin_control -vv'
post_test = 'coverage html'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]


